BUG:210389

Reset the idle counter whenever the adaptor gets plugged/unplugged


svn path=/trunk/KDE/kdebase/workspace/; revision=1060282